src/tests/snapshots/tera__tests__parser__parser_errors@duplicate_block.txt.snap
---
source: src/tests/parser.rs
expression: res.unwrap_err()
input_file: src/tests/parser_inputs/errors/duplicate_block.txt
---
 Syntax error --> [duplicate_block.txt:2:9]
  |
2 | {% block hello %}{% endblock %}
  |          ^---
  = Template already contains a block named `hello`
